--- a/index.html
+++ b/index.html
@@ -224,31 +224,35 @@
         <h2 class="text-3xl monster-header mb-6">Monstres Actuels</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-8">
           <!-- Carte de monstre -->
-          <div
-            class="monster-card bg-gray-700 rounded-lg shadow-lg p-6"
-            data-monster-type="aquatique"
-          >
-            <img
-              src="images/aqualizzard.png"
-              class="w-full h-40 object-cover rounded mb-4"
-            />
-            <h3 class="text-xl font-bold">Aqualizzard</h3>
-            <p class="text-gray-300 text-sm mb-4">Monster Description</p>
-            <div class="flex justify-between items-center mb-2">
-              <span>PV: 50</span>
-              <span>Attaque: 50</span>
-            </div>
-            <div class="text-right">
-              <button
-                class="bg-red-500 hover:bg-red-700 text-white px-4 py-2 rounded-full"
-              >
-                Modifier
-              </button>
-              <button
-                class="bg-gray-500 hover:bg-gray-700 text-white px-4 py-2 rounded-full"
-              >
-                Supprimer
-              </button>
+          <div v-for="monster in monsters" :key="monster.id">
+            <div
+              class="monster-card bg-gray-700 rounded-lg shadow-lg p-6"
+              :data-monster-type="monster.type"
+            >
+              <img
+                :src="monster.img"
+                class="w-full h-40 object-cover rounded mb-4"
+              />
+              <h3 class="text-xl font-bold">{{ monster.name }}</h3>
+              <p class="text-gray-300 text-sm mb-4">
+                {{ monster.description }}
+              </p>
+              <div class="flex justify-between items-center mb-2">
+                <span>PV: {{ monster.pv }}</span>
+                <span>Attaque: {{ monster.attack }}</span>
+              </div>
+              <div class="text-right">
+                <button
+                  class="bg-red-500 hover:bg-red-700 text-white px-4 py-2 rounded-full"
+                >
+                  Modifier
+                </button>
+                <button
+                  class="bg-gray-500 hover:bg-gray-700 text-white px-4 py-2 rounded-full"
+                >
+                  Supprimer
+                </button>
+              </div>
             </div>
           </div>
         </div>
