feat: delete monster by id

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <style>
       .monster-card[data-monster-type="cosmique"] {
         background: linear-gradient(to right, #6e48aa, #9d50bb);
@@ -232,35 +236,35 @@
         <h2 class="text-3xl monster-header mb-6">Monstres Actuels</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-8">
           <!-- Carte de monstre -->
-          <div v-for="monster in monsters" :key="monster.id">
-            <div
-              class="monster-card bg-gray-700 rounded-lg shadow-lg p-6"
-              :data-monster-type="monster.type"
-            >
-              <img
-                :src="monster.img"
-                class="w-full h-40 object-cover rounded mb-4"
-              />
-              <h3 class="text-xl font-bold">{{ monster.name }}</h3>
-              <p class="text-gray-300 text-sm mb-4">
-                {{ monster.description }}
-              </p>
-              <div class="flex justify-between items-center mb-2">
-                <span>PV: {{ monster.pv }}</span>
-                <span>Attaque: {{ monster.attack }}</span>
-              </div>
-              <div class="text-right">
-                <button
-                  class="bg-red-500 hover:bg-red-700 text-white px-4 py-2 rounded-full"
-                >
-                  Modifier
-                </button>
-                <button
-                  class="bg-gray-500 hover:bg-gray-700 text-white px-4 py-2 rounded-full"
-                >
-                  Supprimer
-                </button>
-              </div>
+          <div
+            class="monster-card bg-gray-700 rounded-lg shadow-lg p-6 animate__animated"
+            v-for="monster in monsters"
+            :key="monster.id"
+            :data-monster-type="monster.type"
+            :class="{ animate__backOutRight: monster.isDeleted }"
+          >
+            <img
+              :src="monster.img"
+              class="w-full h-40 object-cover rounded mb-4"
+            />
+            <h3 class="text-xl font-bold">{{ monster.name }}</h3>
+            <p class="text-gray-300 text-sm mb-4">{{ monster.description }}</p>
+            <div class="flex justify-between items-center mb-2">
+              <span>PV: {{ monster.pv }}</span>
+              <span>Attaque: {{ monster.attack }}</span>
+            </div>
+            <div class="text-right">
+              <button
+                class="bg-red-500 hover:bg-red-700 text-white px-4 py-2 rounded-full"
+              >
+                Modifier
+              </button>
+              <button
+                class="bg-gray-500 hover:bg-gray-700 text-white px-4 py-2 rounded-full"
+                @click.prevent="deleteOneById(monster.id)"
+              >
+                Supprimer
+              </button>
             </div>
           </div>
         </div>
@@ -301,6 +305,7 @@
               attack: null,
               description: "",
               type: "",
+              isDeleted: false,
             },
           };
         },
@@ -318,6 +323,17 @@
               description: "",
               type: "",
             };
+          },
+          deleteOneById(id) {
+            const monsterIndex = this.monsters.findIndex(
+              (monster) => monster.id == id
+            );
+            if (monsterIndex !== -1) {
+              this.monsters[monsterIndex].isDeleted = true;
+              setTimeout(() => {
+                this.monsters.splice(monsterIndex, 1);
+              }, 1500);
+            }
           },
         },
         computed: {
